iniciando seccion activities

--- a/Cositas/index.html
+++ b/Cositas/index.html
@@ -56,9 +56,54 @@
     </section>
     <section class="activities">
 
-        <div class="containter">
+            <article class="article_1">
+                <figure>
+                    <img src="./imgs/actividad1.jpeg" />
+                    <figcaption>Test</figcaption>
+                  </figure>
+            </article>
 
-        </div>
+            <article class="article_2">
+              <figure>
+                <img src="./imgs/actividad2.jpeg" />
+                <figcaption>Test</figcaption>
+              </figure>
+            </article>
+
+            <article class="article_3">
+                <figure>
+                  <img src="./imgs/actividad3.jpeg" />
+                  <figcaption>Test</figcaption>
+                </figure>
+              </article>
+
+              <article class="article_4">
+                <figure>
+                  <img src="./imgs/actividad4.jpeg" />
+                  <figcaption>Test</figcaption>
+                </figure>
+              </article>
+
+              <article class="article_5">
+                <figure>
+                  <img src="./imgs/actividad5.jpeg" />
+                  <figcaption>Test</figcaption>
+                </figure>
+              </article>
+
+              <article class="article_6">
+                <figure>
+                  <img src="./imgs/actividad6.jpeg" />
+                  <figcaption>Test</figcaption>
+                </figure>
+              </article>
+
+              <article class="article_7">
+                <figure>
+                  <img src="./imgs/actividad7.jpeg" />
+                  <figcaption>Test</figcaption>
+                </figure>
+              </article>
     </section>
     <section class="location">
         
