--- a/Cositas/index.html
+++ b/Cositas/index.html
@@ -11,7 +11,7 @@
         <img src="./imgs/logo.png" alt="">
         <ul class="menu">
             <li>Galeria</li>
-            <li>Contacto</li>
+            <li ><a href="https://wa.me/59662817" >Contacto</a></li>
             <li>Ubicacion</li>
         </ul>
     </header>
@@ -106,11 +106,12 @@
               </article>
     </section>
     <section class="location">
-        
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5476.455110789444!2d-90.83329483501198!3d13.932473792368286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8588eb825b3beddf%3A0xdebe3681ed581736!2sPuerta%20de%20hierro!5e0!3m2!1ses-419!2sgt!4v1698783021607!5m2!1ses-419!2sgt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
-    <section class="contact">
-
-    </section>
+    <footer>
+        <a aria-label="Chat on WhatsApp" href="https://wa.me/59662817"><img alt="Chat on WhatsApp" src="WhatsAppButtonGreenLarge.png" /></a>
+        <a aria-label="Made by Creyes" href="https://cristopherreyes.tech/">Made by Creyes</a>
+    </footer>
     <script>
         window.addEventListener('scroll', function() {
             var container = document.querySelector('.HeroSection');
