prueba repositorio pc2

--- a/Cositas/index.html
+++ b/Cositas/index.html
@@ -110,7 +110,7 @@
     </section>
     <footer>
         <a aria-label="Chat on WhatsApp" href="https://wa.me/59662817"><img alt="Chat on WhatsApp" src="WhatsAppButtonGreenLarge.png" /></a>
-        <a aria-label="Made by Creyes" href="https://cristopherreyes.tech/">Made by Creyes</a>
+        <a aria-label="Made by Creyes" href="https://cristopherreyes.tech/">Made by Cristopher Reyes</a>
     </footer>
     <script>
         window.addEventListener('scroll', function() {
