--- a/Cositas/index.html
+++ b/Cositas/index.html
@@ -19,6 +19,8 @@
         <div class="info">
             <h1 class="title">Cositas</h1>
             <p>Aprende, Disfruta y Diviertete</p>
+            <a aria-label="" href="https://wa.me/59662817">Contáctanos</a>
+
         </div>
         <div class="background" ></div>
         <div class="image__foregound">
@@ -40,10 +42,6 @@
         </div>
     </main>
 
-    <section class="Logo">
-        <img src="./imgs/logo.png" alt="">
-    </section>
-
     <section class="Galery">
         <div class="container">
             <div class="box box-1" style="--img: url(./imgs/niño4.jpeg);" ></div>
@@ -54,8 +52,8 @@
         </div>
         <div class="cinta"></div>
     </section>
+    
     <section class="activities">
-
             <article class="article_1">
                 <figure>
                     <img src="./imgs/actividad1.jpeg" />
