--- a/Cositas/index.html
+++ b/Cositas/index.html
@@ -54,60 +54,53 @@
     </section>
     
     <section class="activities">
+      <div class="info_0">
+        <h1>Este es el titulo</h1>
+        <p>Este es le parrafo, aca agrego informacion que todavia no tengo</p>
+      </div>
+
             <article class="article_1">
                 <figure>
                     <img src="./imgs/actividad1.jpeg" />
-                    <figcaption>Test</figcaption>
                   </figure>
             </article>
-
+            <div class="info_1">
+              <h1>Este es el titulo</h1>
+              <p>Este es le parrafo, aca agrego informacion que todavia no tengo</p>
+            </div>
             <article class="article_2">
-              <figure>
-                <img src="./imgs/actividad2.jpeg" />
-                <figcaption>Test</figcaption>
-              </figure>
-            </article>
-
-            <article class="article_3">
                 <figure>
                   <img src="./imgs/actividad3.jpeg" />
-                  <figcaption>Test</figcaption>
                 </figure>
               </article>
-
-              <article class="article_4">
+              <div class="info_2">
+                <h1>Este es el titulo</h1>
+                <p>Este es le parrafo, aca agrego informacion que todavia no tengo</p>
+              </div>
+              <article class="article_3">
                 <figure>
                   <img src="./imgs/actividad4.jpeg" />
-                  <figcaption>Test</figcaption>
                 </figure>
               </article>
-
-              <article class="article_5">
+              <div class="info_3">
+                <h1>Este es el titulo</h1>
+                <p>Este es le parrafo, aca agrego informacion que todavia no tengo</p>
+              </div>
+              <article class="article_4">
                 <figure>
-                  <img src="./imgs/actividad5.jpeg" />
-                  <figcaption>Test</figcaption>
+                  <img src="./imgs/actividad8.jpeg" />
                 </figure>
               </article>
-
-              <article class="article_6">
-                <figure>
-                  <img src="./imgs/actividad6.jpeg" />
-                  <figcaption>Test</figcaption>
-                </figure>
-              </article>
-
-              <article class="article_7">
-                <figure>
-                  <img src="./imgs/actividad7.jpeg" />
-                  <figcaption>Test</figcaption>
-                </figure>
-              </article>
+              <div class="info_4">
+                <h1>Este es el titulo</h1>
+                <p>Este es le parrafo, aca agrego informacion que todavia no tengo</p>
+              </div>
     </section>
     <section class="location">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5476.455110789444!2d-90.83329483501198!3d13.932473792368286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8588eb825b3beddf%3A0xdebe3681ed581736!2sPuerta%20de%20hierro!5e0!3m2!1ses-419!2sgt!4v1698783021607!5m2!1ses-419!2sgt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
     <footer>
-        <a aria-label="Chat on WhatsApp" href="https://wa.me/59662817"><img alt="Chat on WhatsApp" src="WhatsAppButtonGreenLarge.png" /></a>
+        <a aria-label="Chat on WhatsApp" href="https://wa.me/59662817"><img alt="Chat on WhatsApp" src="" /></a>
         <a aria-label="Made by Creyes" href="https://cristopherreyes.tech/">Made by Cristopher Reyes</a>
     </footer>
     <script>
