--- a/Cositas/index.html
+++ b/Cositas/index.html
@@ -54,47 +54,39 @@
     </section>
     
     <section class="activities">
-      <div class="info_0">
+      <article  class="info_0">
         <h1>Este es el titulo</h1>
         <p>Este es le parrafo, aca agrego informacion que todavia no tengo</p>
-      </div>
+      </article >
 
-            <article class="article_1">
-                <figure>
+                <figure class="article_1">
                     <img src="./imgs/actividad1.jpeg" />
                   </figure>
-            </article>
-            <div class="info_1">
+            <article  class="info_1">
               <h1>Este es el titulo</h1>
               <p>Este es le parrafo, aca agrego informacion que todavia no tengo</p>
-            </div>
-            <article class="article_2">
-                <figure>
+            </article >
+                <figure class="article_2">
                   <img src="./imgs/actividad3.jpeg" />
                 </figure>
-              </article>
-              <div class="info_2">
+              <article  class="info_2">
                 <h1>Este es el titulo</h1>
                 <p>Este es le parrafo, aca agrego informacion que todavia no tengo</p>
-              </div>
-              <article class="article_3">
-                <figure>
+              </article >
+                <figure class="article_3">
                   <img src="./imgs/actividad4.jpeg" />
                 </figure>
-              </article>
-              <div class="info_3">
+              <article  class="info_3">
                 <h1>Este es el titulo</h1>
                 <p>Este es le parrafo, aca agrego informacion que todavia no tengo</p>
-              </div>
-              <article class="article_4">
-                <figure>
+              </article >
+                <figure class="article_4">
                   <img src="./imgs/actividad8.jpeg" />
                 </figure>
-              </article>
-              <div class="info_4">
+              <article  class="info_4">
                 <h1>Este es el titulo</h1>
                 <p>Este es le parrafo, aca agrego informacion que todavia no tengo</p>
-              </div>
+              </article >
     </section>
     <section class="location">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5476.455110789444!2d-90.83329483501198!3d13.932473792368286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8588eb825b3beddf%3A0xdebe3681ed581736!2sPuerta%20de%20hierro!5e0!3m2!1ses-419!2sgt!4v1698783021607!5m2!1ses-419!2sgt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
