--- a/Cositas/index.html
+++ b/Cositas/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Cositas</title>
 </head>
 <body>
     <header>
@@ -98,7 +98,6 @@
           </svg>
       </a>
         <a aria-label="Made by Creyes" href="https://cristopherreyes.tech/">Made by Cristopher Reyes</a>
-        <img src="./imgs/logo.png" alt="">
 
       </footer>
 
