--- a/Cositas/index.html
+++ b/Cositas/index.html
@@ -9,11 +9,16 @@
 <body>
     <header>
         <img src="./imgs/logo.png" alt="">
+        <input type="checkbox"  id="check" checked>
+        <label for="check" class="bar-btn">
+          <img src="./imgs/bars-solid.svg" alt="menu">
+        </label>
         <ul class="menu">
-            <li>Galeria</li>
+            <li><a href="#G">Galeria</a></li>
             <li ><a href="https://wa.me/59662817" >Contacto</a></li>
             <li ><a href="#map">Ubicacion</a></li>
         </ul>
+
     </header>
     <main class="HeroSection" >
         <div class="info">
@@ -42,7 +47,7 @@
         </div>
     </main>
 
-    <section class="Galery">
+    <section class="Galery" id="G">
         <div class="container">
             <div class="box box-1" style="--img: url(./imgs/niño4.jpeg);" ></div>
             <div class="box box-2" style="--img: url(./imgs/niño2.jpeg);" ></div>
@@ -55,37 +60,36 @@
     
     <section class="activities">
             <article  class="info_0">
-              <h1>Este es el titulo</h1>
-              <p>Este es le parrafo, aca agrego informacion que todavia no tengo</p>
+              <h1>¿Qué Hacemos?</h1>
             </article >
 
                 <figure class="article_1">
                     <img src="./imgs/actividad1.jpeg" />
                 </figure>
             <article  class="info_1">
-              <h1>Este es el titulo</h1>
-              <p>Este es le parrafo, aca agrego informacion que todavia no tengo</p>
+              <h1>Compartimos con amigos</h1>
+              <p>Al final del día nos divertimos, aprendemos y compartimos con amigos.</p>
             </article >
                 <figure class="article_2">
                   <img src="./imgs/actividad3.jpeg" />
                 </figure>
               <article  class="info_2">
-                <h1>Este es el titulo</h1>
-                <p>Este es le parrafo, aca agrego informacion que todavia no tengo</p>
+                <h1>Talleres de manualidades</h1>
+                <p> Enseñamos a los niños cómo hacer manualidades relacionadas con la repostería, como hacer tarjetas de felicitación con diseños de cupcakes o crear su propio delantal de chef.</p>
               </article >
                 <figure class="article_3">
                   <img src="./imgs/actividad4.jpeg" />
                 </figure>
               <article  class="info_3">
-                <h1>Este es el titulo</h1>
-                <p>Este es le parrafo, aca agrego informacion que todavia no tengo</p>
+                <h1>Talleres de decoracion de cupcakes</h1>
+                <p>Enseñamos a los niños cómo decorar cupcakes con diferentes diseños y técnicas de glaseado. Puedes incluir fotos de cupcakes decorados por los niños en talleres anteriores.</p>
               </article >
                 <figure class="article_4">
                   <img src="./imgs/actividad8.jpeg" />
                 </figure>
               <article  class="info_4">
-                <h1>Este es el titulo</h1>
-                <p>Este es le parrafo, aca agrego informacion que todavia no tengo</p>
+                <h1>Talleres de galletas decoradas</h1>
+                <p>Enseñamos a los niños cómo decorar galletas con diferentes diseños y técnicas de glaseado.</p>
               </article >
     </section>
     <section class="location" id="map">
