--- a/Cositas/index.html
+++ b/Cositas/index.html
@@ -82,7 +82,7 @@
                 </figure>
               <article  class="info_3">
                 <h1>Talleres de decoracion de cupcakes</h1>
-                <p>Enseñamos a los niños cómo decorar cupcakes con diferentes diseños y técnicas de glaseado. Puedes incluir fotos de cupcakes decorados por los niños en talleres anteriores.</p>
+                <p>Enseñamos a los niños cómo decorar cupcakes con diferentes diseños y técnicas de glaseado.</p>
               </article >
                 <figure class="article_4">
                   <img src="./imgs/actividad8.jpeg" />
