se agrego desplazamiento dentro de las secciones del documento y se agrego scroll pading

--- a/Cositas/index.html
+++ b/Cositas/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <img src="./imgs/logo.png" alt="">
+      <a href="#inicio">
+        <img src="./imgs/logo.png" alt="" >
+      </a>
         <input type="checkbox"  id="check" checked>
         <label for="check" class="bar-btn">
           <img src="./imgs/bars-solid.svg" alt="menu">
@@ -20,7 +22,7 @@
         </ul>
 
     </header>
-    <main class="HeroSection" >
+    <main class="HeroSection" id="inicio" >
         <div class="info">
             <h1 class="title">Cositas</h1>
             <p>Aprende, Disfruta y Diviertete</p>
